--- a/backend/package.json
+++ b/backend/package.json
@@ -29,8 +29,11 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-validator": "^7.3.0",
+    "file-type": "^21.1.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.1.0",
+    "mime-types": "^3.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
