--- a/backend/fastapi_service/requirements.txt
+++ b/backend/fastapi_service/requirements.txt
@@ -15,3 +15,10 @@ pydantic_core==2.33.2
 
 # File upload support
 python-multipart==0.0.9
+
+# Environment variable support
+python-dotenv==1.2.1
+pydantic_settings==2.12.0
+
+# Google Generative AI SDK
+google-generative-ai==1.52.0
