--- a/backend/express-app/package.json
+++ b/backend/express-app/package.json
@@ -32,12 +32,14 @@
     "file-type": "^21.1.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^17.0.1",
     "mime": "^4.1.0",
     "mime-types": "^3.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.11",
     "qrcode": "^1.5.4",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3"
