--- a/backend/express-app/package.json
+++ b/backend/express-app/package.json
@@ -23,8 +23,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.83.0",
     "axios": "^1.13.2",
+    "bakong-khqr": "^1.0.7",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
