--- a/backend/express-app/package.json
+++ b/backend/express-app/package.json
@@ -44,7 +44,8 @@
     "nodemailer": "^7.0.11",
     "qrcode": "^1.5.4",
     "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.3"
+    "sequelize-cli": "^6.6.3",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
